[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/ui/title_page.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/title_exit_highlight.png" type="Texture" id=2]
[ext_resource path="res://resources/ui/title_play_highlight.png" type="Texture" id=3]
[ext_resource path="res://resources/ui/title2.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitHigh" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="PlayHigh" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitDetect" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 795.0
margin_top = 149.0
margin_right = -95.0
margin_bottom = -331.0

[node name="PlayDetect" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 613.0
margin_top = 70.0
margin_right = -254.0
margin_bottom = -414.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -179.0
margin_top = -161.0
margin_right = -5.0
margin_bottom = -147.0
rect_rotation = 27.4
text = "By KerDelos for LD48"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="ExitDetect" to="." method="_on_ExitDetect_mouse_entered"]
[connection signal="mouse_exited" from="ExitDetect" to="." method="_on_ExitDetect_mouse_exited"]
[connection signal="pressed" from="ExitDetect" to="." method="_on_ExitDetect_pressed"]
[connection signal="mouse_entered" from="PlayDetect" to="." method="_on_PlayDetect_mouse_entered"]
[connection signal="mouse_exited" from="PlayDetect" to="." method="_on_PlayDetect_mouse_exited"]
[connection signal="pressed" from="PlayDetect" to="." method="_on_PlayDetect_pressed"]
